--- a/dev/less/app-style.less
+++ b/dev/less/app-style.less
@@ -9,3 +9,17 @@
 body{
 	font-family:"Armata Regular";
 }
+
+.border-gray{
+	border: 1px solid @borderColor;
+}
+
+form {
+	input[type="text"], input[type="password"]{
+		border: 1px solid @borderColor;
+	}
+}
+
+.bg-light-pink{
+	background-color: #F9F5F5;
+}
